// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-kmxjf7"
    title={undefined}
  >
    <span
      className="cf-1u9fru1"
    />
  </i>
</span>
`;

exports[`should render with a label 1`] = `
<span
  className="cf-modal__close"
  onClick={[Function]}
>
  <i
    className="cf-kmxjf7"
    title="label"
  >
    <span
      className="cf-1u9fru1"
    >
      label
    </span>
  </i>
</span>
`;
